--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,9 @@
 	<!-- <button type="button" class="btn btn-primary">Primary</button> -->
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#"><h1><b>LexisNexis #4</b></h1></a>
+		<a class="navbar-brand" href="#">
+			<h1><b>LexisNexis #4</b></h1>
+		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -60,23 +62,23 @@
 			<p>{{ post.Crime }}</p>
 			<p>{{ post.State }}</p>
 		{% endfor %} -->
-		<br>	
-		
-			<form method="POST">
-			
-				<div class="row ">
-					<div class="form-group col-6">
-						<input type="text" class="form-control" name="crime" placeholder="Enter Crime" required>
-					</div>
-				</div>
+		<br>
 
-				<div class="row ">
-					<div class="form-group col-6">
-						<input type="text" class="form-control" name="state" placeholder="Enter State" required>
-					</div>
-				</div>
+		<form method="POST">
 
-				<!-- <div class="row">
+			<div class="row ">
+				<div class="form-group col-6">
+					<input type="text" class="form-control" name="crime" placeholder="Enter Crime" required>
+				</div>
+			</div>
+
+			<div class="row ">
+				<div class="form-group col-6">
+					<input type="text" class="form-control" name="state" placeholder="Enter State" required>
+				</div>
+			</div>
+
+			<!-- <div class="row">
 					<select name="cars">
 						<option value="volvo">Volvo</option>
 						<option value="saab">Saab</option>
@@ -85,11 +87,11 @@
 					</select>
 				</div> -->
 
-				<div class="row ">
-					<div class="col-1"></div>
-					<button type="submit" class="btn btn-primary col-3">Submit</button>
-				</div>
-				</form>
+			<div class="row ">
+				<div class="col-1"></div>
+				<button type="submit" class="btn btn-primary col-3">Submit</button>
+			</div>
+		</form>
 	</main>
 
 
