--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -66,11 +66,11 @@
 
 		<form method="POST">
 
-			<div class="row ">
+			<!-- <div class="row ">
 				<div class="form-group col-6">
 					<input type="text" class="form-control" name="crime" placeholder="Enter Crime" required>
 				</div>
-			</div>
+			</div> -->
 
 			<div class="row ">
 				<div class="form-group col-6">
@@ -78,15 +78,33 @@
 				</div>
 			</div>
 
-			<!-- <div class="row">
-					<select name="cars">
-						<option value="volvo">Volvo</option>
-						<option value="saab">Saab</option>
-						<option value="fiat">Fiat</option>
-						<option value="audi">Audi</option>
-					</select>
-				</div> -->
-
+			<div class="row">
+				<select name="crime" required>
+					<option value="26:5861">26:5861: Taxes in MACHINE GUNS, DESTRUCTIVE DEVICES, AND CERTAIN OTHER
+						FIREARMS</option>
+					<option value="8:1324">8:1324: Immigration</option>
+					<option value="21:841">21:841: Drug control and enforcement Prohibited</option>
+					<option value="21:846">21:846: Drug control and Attempt and conspiracy</option>
+					<option value="18:924">18:924: Criminal Firearms penalty</option>
+					<option value="47:223">47:223: Telecommunications COMMON CARRIERS</option>
+					<option value="18:1341">18:1341: Criminal MAIL FRAUD AND OTHER FRAUD OFFENSES</option>
+					<option value="18:152">18:152: Criminal Bankruptcy</option>
+					<option value="18:1956">18:1956: Criminal RACKETEERING</option>
+					<option value="18:115">18:115: Criminal Influencing, impeding, or retaliating against a Federal
+						official by threatening or injuring a family member</option>
+					<option value="16:1372">16:1372: Laundering of monetary instruments</option>
+					<option value="18:1957">18:1957: Criminal Engaging in monetary transactions in property derived from
+						specified unlawful activity</option>
+					<option value="18:117">18:117: Criminal Domestic assault by an habitual offender", "18:111":
+						"Criminal Assaulting, resisting, or impeding certain officers or employees</option>
+					<option value="18:922">18:922: Criminal Firearms Unlawful acts",
+					<option value="18:657">18:657: Criminal Lending, credit and insurance institutions</option>
+					<option value="18:1711">18:1711: Misappropriation of postal funds</option>
+					<option value="18:371">18:371: Criminal conspiracy</option>
+					<option value="18:1343">18:1343: Criminal Mail Fraud</option>
+				</select>
+			</div>
+			<br>
 			<div class="row ">
 				<div class="col-1"></div>
 				<button type="submit" class="btn btn-primary col-3">Submit</button>
